# rust-crash-demo-20220908

./: Cargo.toml
src/: app.glade  main.rs
